--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "web-vitals": "^2.1.3"
   },
   "scripts": {
+    "heroku-postbuild": "cd api && npm install && npm install --only=dev --no-shrinkwrap && npm run build",
     "start": "set PORT=8000 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
